[package]
name = "weibo_project"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
axum-extra = { version = "0.10.3", features = ["typed-header"] }
chrono = "0.4.42"
regex = "1.12.2"
rust-crypto = "0.2.36"
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "macros", "runtime-tokio-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
validator = { version = "0.20.0", features = ["derive"] }
